--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>ToDo List</title>
   </head>
   <body>
     <div id="root"></div>
